tests/fail/capture_on_quote.msh
# Captures are not allowed on quotations; they would change the stack effect
( "a" wl ) * x
